src/App.css
html,
body,
.App,
#root {
  height: 100%;
  width: 100%;
  font-family: 'Montserrat', sans-serif;
  margin: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

.App {
  background: rgb(53, 53, 53);
  background: linear-gradient(180deg, rgb(37, 37, 37) 0%, rgb(32, 32, 32) 15%, rgba(18, 18, 18, 1) 100%);
}

.previewBanner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: white;
  padding: 11px 24px 15px 15px;
  background: rgb(175, 40, 150);
  background: linear-gradient(90deg, rgba(175, 40, 150, 1) 0%, rgba(80, 155, 245, 1) 100%);
}

.previewBanner p {
  margin: 0px;
}

.footerTopText {
  font-weight: 400;
  text-transform: uppercase;
  font-size: 0.8rem;
  padding-bottom: 10px;
}

.btnPill {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0px 30px;
  background-color: white;
  color: #5e5e5e;
  font-weight: 700;
  border-radius: 50px;
  flex-shrink: 0;
  transition: 0.3s;
}

.btnPill:hover {
  cursor: pointer;
  color: #111111;
}


.leftNav {
  width: 235px;
  background: black;
  padding-top: 24px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-shrink: 0;
}

.leftNav ul {
  padding: 0px 24px;
  margin: 0px;
}

.nav-item {
  display: flex;
  align-items: center;
  color: white;
  font-weight: 600;
  font-size: .9rem;
  margin-bottom: 20px;
  transition: .3s;
}

.nav-item:hover {
  cursor: pointer;
  color: white;
}

.inactive-nav-item {
  color: #afafaf;
}

.nav-item-icon {
  padding-right: 18px;
}


.left-nav-logo {
  padding: 0px 24px;
  width: 60%;
  margin-bottom: 36px;
}

.topNav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #111111;
  height: 30px;
  padding: 16px 32px;
}

main {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.mainContent {
  display: flex;
  /* FIX: This isn't the right way to handle this */
  height: calc(100% - 75px);
  flex-direction: row;
}

.signUp {
  font-weight: 700;
  color: #b3b3b3;
  margin-right: 25px;
  transition: .3s;
}

.signUp:hover {
  cursor: pointer;
  color: white;
}


.topNavSection {
  display: flex;
  align-items: center;
}

.drkBtn {
  color: #1d1d1d;
}

.focusSection {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.albumCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 15px;
  height: 272px;
  width: 150px;
  background: #161616;
  border-radius: 5px;
  margin: 0px 5px;
}

.albumCard p {
  align-self: start;
  padding-left: 5px;
  color: white;
  font-weight: 700;
  margin-bottom: 0px;
}

.albumCard .info {
  align-self: start;
  padding-left: 5px;
  color: white;
  font-weight: 100;
}

.albumCard {
  transition: 0.3s;
}

.albumCard:hover {
  background: #292929;
}

.album {
  width: 150px;
  height: 150px;
  background: white;
  border-radius: 10px;
  background-image: url("../src/images/piano.jpg");
  background-size: cover;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  position: relative;
}

.cookies {
  font-size: 0.7rem;
  color: #b3b3b3;
  padding: 32px;
}

.language-btn {
  display: flex;
  align-items: center;
  color: white;
  background: none;
  border: 1px solid white;
  border-radius: 25px;
  padding: 7px 10px;
  margin-bottom: 32px;
  margin-left: 32px;
  font-weight: 600;
}

.language-btn img {
  padding-right: 5px;
}

.languagePopover {
  height: 100%;
  width: 100%;
  background: rgba(0, 0, 0, 0.7);
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
}

.languagePicker {
  background-color: #282828;
  border-radius: 10px;
}

.languagePickerHeader {
  display: flex;
  padding: 0px 20px 10px 20px;
  border-bottom: 1px solid gray;
  margin-bottom: 20px;
}

.languagePicker div {
  font-size: 0.9rem;
}

.languageOptions {
  display: flex;
  justify-content: space-evenly;
  padding-bottom: 10px;
}

.languageOptions div {
  font-size: 0.9rem;
  width: 120px;
  height: 60px;
  padding: 10px;
}

.languageOptions div:hover {
  background: #5e5e5e;
}

.languageOptions div p {
  margin: 0px;
}

.close-language {
  background: #1b1b1b;
  border-radius: 50%;
  padding: 5px;
  height: 16px;
  width: 16px;
  margin-top: 17px;
  margin-left: 25px;
}


.nativeLang {
  padding-top: 5px;
  color: #afafaf;
}

.innerContent {
  display: flex;
  padding: 10px 32px;
  box-sizing: border-box;
  height: 100%;
  flex-direction: column;
  overflow-y: auto;
}

.albumSectionHeader {
  margin-bottom: 20px;
  color: white;
  font-weight: 600;
  font-size: 1.4rem;
}

.mainBodyContent {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.album {
  position: relative;
}

.playBtn {
  opacity: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: 50%;
  background: #1DB954;
  width: 50px;
  height: 50px;
  position: absolute;
  bottom: 0px; /* Initial position off-screen */
  right: 5px;
  transition:  0.2s ease-in-out; /* Transition property for smooth animation */
}

.albumCard:hover .playBtn {
  opacity: 1;
  bottom: 10px; /* Move to the desired position on hover */
}

